--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
   <p>Where do you want to see the weather?
     Click the button and see if you should go on your trip or not.</p>
 
+
   <div id="wrapperDiv"></div>
   <button id="myButton">Click here</button><br><br>
 
   <div class="wrapper"></div>
 
   <div id="wrapperDiv2"></div>
-  <img src="img/krabi.jpg" style="height:300px;" alt="Image of black sky in Krabi"/>
+  <img src="img/krabi.jpg" style="height:400px;" alt="Image of three women under a black sky on a beach in Krabi"/>
 </main>
 
 <footer>
