--- a/index.html
+++ b/index.html
@@ -72,20 +72,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Weather App</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      background: #adebeb;
       text-align: center;
-      padding: 40px;
+      padding: 30px;
     }
     input, button {
       padding: 8px 12px;
       font-size: 16px;
-      margin: 5px;
+      margin: 15px;
     }
     .weather-box {
       background: white;
@@ -103,7 +104,7 @@
 <p>Type a city and see the weather:</p>
 
 <input type="text" id="cityInput" placeholder="Enter city name">
-<button id="checkWeather">Get Weather</button>
+<button id="checkWeather">Get weather</button>
 
 <div id="weatherContainer"></div>
 
@@ -142,6 +143,25 @@
     }
   });
 </script>
+
+<div id="wrapperDiv"></div>
+<!--<button id="myButton">Click here</button><br><br>-->
+
+<div class="wrapper"></div>
+
+<div id="wrapperDiv2"></div>
+<img src="img/krabi.jpg" style="height:400px;" alt="Image of three women under a black sky on a beach in Krabi"/>
+</main>
+
+<footer>
+  <p>© 2025 made by @littlemissmilla</p>
+</footer>
+
+<!--This is my site, made from HTML5 Boilerplate
+<p>Hello world! This is HTML5 Boilerplate.</p>-->
+<script src="js/app.js"></script>
+
 </body>
+
 </html>
 
