--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 </head>
 <body>
 
-<h1>What about tomorrow? 🌤️</h1>
-<p>Type a city and see the weather:</p>
+<h1>🌤️ What about tomorrow? 🌤️</h1>
+<p>Type a city and see what the weather is like:</p>
 
 <input type="text" id="cityInput" placeholder="Enter city name">
 <button id="checkWeather">Get weather</button>
@@ -144,10 +144,12 @@
   });
 </script>
 
-<div id="wrapperDiv"></div>
-<!--<button id="myButton">Click here</button><br><br>-->
 
-<div class="wrapper"></div>
+<main class="content">
+
+<!--<div id="wrapperDiv"></div>
+
+<div class="wrapper"></div>-->
 
 <div id="wrapperDiv2"></div>
 <img src="img/krabi.jpg" style="height:400px;" alt="Image of three women under a black sky on a beach in Krabi"/>
@@ -164,4 +166,3 @@
 </body>
 
 </html>
-
