--- a/index.html
+++ b/index.html
@@ -1,74 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather in 3 Cities</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; padding: 20px; }
-    h1 { text-align: center; }
-    .weather-box {
-      background: white;
-      border-radius: 12px;
-      padding: 16px;
-      width: 280px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-      margin: 16px auto;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>Weather in 3 Cities</h1>
-  <div id="weatherContainer"></div>
-
-  <script>
-    const API_KEY = "https://api.openweathermap.org/data/2.5/weather?q="; // Replace with your OpenWeather API key
-    const cities = [
-      { name: "Stockholm", country: "SE" },
-      { name: "London", country: "GB" },
-      { name: "Bangkok", country: "TH" }
-    ];
-
-    async function getWeather(city, country) {
-      const url = `https://api.openweathermap.org/data/2.5/weather?q=${city},${country}&units=metric&appid=${API_KEY}`;
-      const response = await fetch(url);
-      if (!response.ok) throw new Error("Failed to fetch weather");
-      return response.json();
-    }
-
-    async function showWeather() {
-      const container = document.getElementById("weatherContainer");
-      container.innerHTML = "";
-
-      for (const {name, country} of cities) {
-        try {
-          const data = await getWeather(name, country);
-          const temp = Math.round(data.main.temp);
-          const desc = data.weather[0].description;
-
-          const cityBox = document.createElement("div");
-          cityBox.className = "weather-box";
-          cityBox.innerHTML = `
-            <h3>${data.name}, ${data.sys.country}</h3>
-            <p>${temp}°C — ${desc}</p>
-          `;
-          container.appendChild(cityBox);
-        } catch (err) {
-          console.error(err);
-          const errorBox = document.createElement("div");
-          errorBox.className = "weather-box";
-          errorBox.innerHTML = `<h3>${name}, ${country}</h3><p>Could not load weather data.</p>`;
-          container.appendChild(errorBox)
-        }
-      }
-    }
-    showWeather();
-    </script>
-</body>
-</html>
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -109,7 +38,7 @@
 <div id="weatherContainer"></div>
 
 <script>
-  const API_KEY = "bf911426b3cfa77b46355221ff33da01"; // 🔑 Replace with your OpenWeather API key
+  const API_KEY = "bf911426b3cfa77b46355221ff33da01";// 🔑 Replace with your OpenWeather API key-->
 
   document.getElementById("checkWeather").addEventListener("click", async () => {
     const city = document.getElementById("cityInput").value.trim();
@@ -144,13 +73,7 @@
   });
 </script>
 
-
 <main class="content">
-
-<!--<div id="wrapperDiv"></div>
-
-<div class="wrapper"></div>-->
-
 <div id="wrapperDiv2"></div>
 <img src="img/krabi.jpg" style="height:400px;" alt="Image of three women under a black sky on a beach in Krabi"/>
 </main>
@@ -159,10 +82,6 @@
   <p>© 2025 made by @littlemissmilla</p>
 </footer>
 
-<!--This is my site, made from HTML5 Boilerplate
-<p>Hello world! This is HTML5 Boilerplate.</p>-->
 <script src="js/app.js"></script>
-
 </body>
-
 </html>
