--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     }
 
     button {
-      background-color: #ffcc99;
-      color: #006699;
+      background-color: #33cccc;
+      color: #000069;
       border: none;
       padding: 12px 24px;
       border-radius: 50px;
@@ -83,7 +83,7 @@
 
 <main>
   <h1>🌤️ What about tomorrow? 🌤️</h1>
-  <p>Type a city and see what the weather is like:</p>
+  <p>Type the name of a city and see what the weather is like at the moment.</p>
 
   <input type="text" id="cityInput" placeholder="Enter city name" />
   <button id="checkWeather">Get weather</button>
