added css responsive

--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <title>Simple Weather App</title>
 
   <style>
-    /* ----------------- Base ----------------- */
+
     body {
       display: flex;
       flex-direction: column;
-      min-height: 100vh; /* hela viewport-höjd */
+      min-height: 100vh;
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       background-color: #d1e0e0;
     }
 
     main {
-      flex: 1; /* tar all ledig höjd */
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -67,7 +67,6 @@
       margin-top: 20px;
     }
 
-    /* ----------------- Footer ----------------- */
     footer {
       margin-top: auto; /* trycker footer till botten */
       width: 100%;
@@ -100,93 +99,3 @@
 <script src="js/app.js"></script>
 </body>
 </html>
-
-
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Weather App</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #d1e0e0;
-      font-size: 18px;
-      text-align: center;
-      padding: 30px;
-    }
-    input, button {
-      padding: 8px 12px;
-      font-size: 16px;
-      margin: 15px;
-    }
-    .weather-box {
-      background: white;
-      border-radius: 12px;
-      padding: 16px;
-      width: 280px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-      margin: 20px auto;
-    }
-  </style>
-</head>
-<body>
-
-<h1>🌤️ What about tomorrow? 🌤️</h1>
-<p>Type a city and see what the weather is like:</p>
-
-<input type="text" id="cityInput" placeholder="Enter city name">
-<button id="checkWeather">Get weather</button>
-
-<div id="weatherContainer"></div>
-
-<script>
-  const API_KEY = "bf911426b3cfa77b46355221ff33da01";// 🔑 Replace with your OpenWeather API key-->
-
-<!--  document.getElementById("checkWeather").addEventListener("click", async () => {
-    const city = document.getElementById("cityInput").value.trim();
-    const container = document.getElementById("weatherContainer");
-    if (!city) {
-      container.innerHTML = "<p>Please enter a city.</p>";
-      return;
-    }
-
-    container.innerHTML = "<p>Loading...</p>";
-
-    try {
-      const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&appid=${API_KEY}`;
-      const response = await fetch(url);
-      if (!response.ok) throw new Error("City not found");
-      const data = await response.json();
-
-      const temp = Math.round(data.main.temp);
-      const desc = data.weather[0].description;
-      const country = data.sys.country;
-
-      container.innerHTML = `
-          <div class="weather-box">
-            <h3>${data.name}, ${country}</h3>
-            <p>${temp}°C — ${desc}</p>
-          </div>
-        `;
-    } catch (err) {
-      console.error(err);
-      container.innerHTML = "<p>Could not load weather data. Please check spelling.</p>";
-    }
-  });
-</script>
-
-<main class="content">
-<div id="wrapperDiv2"></div>
-<img src="img/krabi.jpg" style="height:400px;" alt="Image of three women under a black sky on a beach in Krabi"/>
-</main>
-
-<footer>
-  <p>© 2025 made by @littlemissmilla</p>
-</footer>
-
-<script src="js/app.js"></script>
-</body>
-</html>-->
